index.css
body {
  margin: 0;
  display: flex;
  flex-direction: column;
}
body * {
  font-family: 'Overpass Mono', monospace;
  transition: background 0.2s;
}
main {
  flex: 1 0 auto;
  display: flex;
  justify-content: center;
}
.content {
  margin: auto;
  text-align: center;
}
.main-text {
  text-align: center;
  padding: 0;
  border: none;
  width: 40%;
}
.main-text:focus {
  outline: none;
}
@media only screen and (min-width: 1100px){
  .main-text {
    font-size: 7rem;
  }
}
@media only screen and (max-width: 1100px){
  .main-text {
    font-size: 5rem;
  }
}
@media only screen and (max-width: 800px){
  .main-text {
    font-size: 3rem;
  }
}
@media only screen and (max-width: 400px){
  .main-text {
    font-size: 1.4rem;
  }
}
footer {
  padding: 10px;
  z-index: 100;
  background: rgba(0, 0, 0, 0.25);
}
a {
  text-decoration: none;
  color: white !important;
}
#shareLink {
  position: absolute;
}

